# LibRPA

./: .gitignore  CMakeLists.txt  Makefile  README.md  cmake.inc
.github/workflows/: ci.yml  deploy-ghpages-doc.yml
binding/fortran/: librpa_f.f90  librpa_f03.f90  librpa_f03_stubs.f90
binding/fortran/test/: test_f03_binding_exx_bccHe.f90
cmake/: FindELPA.cmake
docs/: Makefile  index.rst
docs/develop/: dataset_format.md  develop_tips.md  licensing.md
docs/doxygen/: Doxyfile
docs/tutorial/rpa/: rpa_driver_aims.md
docs/user_guide/: api_usage.md  compile_options.md  driver_usage.md  install.md  runtime_parameters.md
driver/: CMakeLists.txt  driver.cpp  driver.h  driver_params.cpp  driver_params.h  driver_utils.cpp  inputfile.cpp  main.cpp  read_aims.cpp  read_data.cpp  read_data.h  reader_coulomb.cpp  reader_coulomb.h  reader_lri.cpp  reader_lri.h  task_exx.cpp  task_exx_band.cpp  task_exx_band.h  task_gw.cpp  task_gw.h  task_gw_band.cpp  task_gw_band.h  task_hf_band.cpp  task_qsgw.cpp  task_qsgwA.cpp  task_qsgw_band.cpp  task_rpa.cpp  task_scRPA.cpp  task_scRPA.h  task_scRPA_band.cpp  task_screened_coulomb.cpp  task_screened_coulomb.h  task_test.cpp  task_test.h
driver/task/: exx.cpp  exx_band.cpp  g0w0.cpp  g0w0_band.cpp  screened_coulomb.cpp
include/: librpa.hpp  librpa_compute.h  librpa_enums.h  librpa_input.h  librpa_options.h
qsgw/: Hamiltonian.cpp
regression_tests/: .gitignore  README.md  run_regression.py  testsuite.xml
regression_tests/backend/: commandparser.py  driver.py
regression_tests/backend/comparisons/: cmp_float.py  cmp_table.py  test_cmp_float.py  test_cmp_table.py
regression_tests/refs/exx_aims_C_sc_libri/dataset/: aims.out.export  aims.out.gw
regression_tests/refs/exx_aims_C_sc_libri/librpa/: librpa_omp1_np4.out
regression_tests/refs/g0w0_aims_MgO_libri/: aims.out.export  librpa.out
regression_tests/refs/g0w0_aims_Si_libri/: aims.out.export  librpa.out
regression_tests/refs/g0w0_aims_Si_libri/librpa/: librpa_omp1_np4.out
regression_tests/refs/g0w0_aims_mole_H2O_libri/: aims.out.export  librpa.out
regression_tests/refs/g0w0_aims_mole_H2_libri/: aims.out.export  librpa.out  librpa.out.16  self_energy_omega.dat.16
regression_tests/refs/g0w0_band_aims_Si_libri/: aims.out.export  librpa.out
regression_tests/refs/g0w0_band_aims_Si_libri/librpa/: librpa_omp1_np4.out
regression_tests/refs/rpa_aims_mole_H2O_libri/: aims.out.export  librpa.out
regression_tests/testcases/exx_aims_C_sc_libri/: README.md  control.in  geometry.in
regression_tests/testcases/exx_aims_C_sc_libri/librpa/: librpa.in
regression_tests/testcases/g0w0_aims_Li_atom_libri/: librpa.in
regression_tests/testcases/g0w0_aims_MgO_libri/: control.in  geometry.in
regression_tests/testcases/g0w0_aims_Si_libri/: README.md  control.in  coulomb_reader_v1.py  librpa.in
regression_tests/testcases/g0w0_aims_Si_libri/librpa/: librpa.in
regression_tests/testcases/g0w0_aims_mole_H2O_libri/: control.in
regression_tests/testcases/g0w0_aims_mole_H2_libri/: control.in  geometry.in  librpa.in
regression_tests/testcases/g0w0_band_abacus_BN_headwing_shrink_soc_libri/: INPUT_scf
regression_tests/testcases/g0w0_band_abacus_BN_soc_libri/librpa/: librpa.in
regression_tests/testcases/g0w0_band_aims_Si_libri/: control.in  librpa.in
regression_tests/testcases/g0w0_band_aims_Si_libri/librpa/: librpa.in
regression_tests/testcases/rpa_aims_mole_H2O_libri/: control.in  librpa.in
src/: CMakeLists.txt  app_exx.cpp  app_rpa.cpp  atomic_basis.cpp  atomic_basis.h  atoms.h  base_blacs.cpp  base_blacs.h  chi0.cpp  chi0.h  complexmatrix.cpp  constants.cpp  coulmat.cpp  dielecmodel.cpp  dielecmodel.h  envs_blacs.cpp  envs_blacs.h  envs_mpi.cpp  envs_mpi.h  epsilon.cpp  epsilon.h  exx.cpp  exx.h  geometry.cpp  geometry.h  get_minimax_local.cpp  gw.cpp  gw.h  hartree.cpp  hartree.h  lib_main.cpp  libri_stub.h  libri_utils.h  librpa.cpp  librpa.h  librpa_main.cpp  matrix_m.h  matrix_m_parallel_utils.h  meanfield.cpp  meanfield.h  (+20 more)
src/api/: compute_exx.cpp  compute_g0w0.cpp  compute_helper.cpp  compute_helper.h  compute_rpa.cpp  dataset.cpp  dataset.h  dataset_helper.cpp  global.cpp  handler.cpp  input.cpp  instance_manager.cpp  instance_manager.h  librpa.cpp  options.cpp
src/core/: analycont.cpp  analycont.h  atom.h  chi0.cpp  chi0.h  dielecmodel.cpp  epsilon.cpp  epsilon.h  exx.cpp  exx.h  geometry.cpp  geometry.h  gw.cpp  gw.h  meanfield.cpp  meanfield.h  meanfield_mpi.cpp  meanfield_mpi.h  pbc.cpp  pbc.h  qpe_solver.cpp  qpe_solver.h  ri.h  timefreq.cpp
src/elpa/: elpa_connector.cpp  elpa_connector.h
src/gpu/: device_connector.cpp  device_connector.h  la_connector.h
src/interface/: gx_minimax_wrp.f90  mpi.h
src/io/: fs.cpp  fs.h  input_elsi.cpp  input_elsi.h  output_gw.cpp  output_gw.h
src/math/: scalapack_connector.h  utils_matrix_m_mpi.h  vector3.h
src/mpi/: base_blacs.cpp  base_blacs.h  base_mpi.cpp  base_mpi.h  kpoint_blacs_parallel_context.cpp  kpoint_blacs_parallel_context.h
src/test/: CMakeLists.txt  test_analycont.cpp  test_base_mpi.cpp  test_blacs.cpp  test_dataset.cpp  test_geometry.cpp  test_io.cpp  test_kpoint_blacs_parallel_context.cpp  test_libri_utils.cpp  test_matrix_m_parallel_utils.cpp  test_meanfield.cpp  test_meanfield_mpi.cpp  test_parallel_mpi.cpp  test_pbc.cpp  test_qpe_solver.cpp  test_timefreq.cpp  testutils.h
src/utils/: elpa_stub.cpp  envs_cmake.cpp.in  envs_cmake.h  libri_utils.h  profiler.cpp  utils_cmake.cpp  utils_mem.cpp  utils_mem.h
utilities/: Makefile  check_librpa_options.py  convert_legacy_Cs.cpp  convert_legacy_Cs_v1.cpp  convert_legacy_coulomb_mat.py  convert_legacy_coulomb_mat_mpi.cpp  convert_legacy_coulomb_mat_v1_mpi.cpp
